--- a/css/style.css
+++ b/css/style.css
@@ -38,10 +38,24 @@ header span{
 .container{
     width: 50%;
     margin-left: 25%;
-    margin-left: 25%;
+    margin-right: 25%;
     background-color: white;
-    padding: 10px;
     margin-top: 20px;
+
+}
+
+.nav{
+    padding-top: 20px;
+    margin-left: 30px;
+    margin-bottom: 10px;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+}
+.main{
+    margin-left: 30px;
+    margin-top: 2px;
+}
+
+.title{
+    padding-top: 30px;
 }
