--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ header span{
     background-color: white;
     margin-left: 30px;
     color: #686B73 ;
+    padding-bottom: 10px;
 }
 
 .title{
@@ -94,4 +95,27 @@ header span{
 
 .main p{
     margin: 10px;
+}
+.main .title{
+    margin: 0px;
+}
+
+#purple{
+    background-color:#9C72E4 ;
+}
+
+#marine{
+    background-color:#64C0A9 ;
+}
+
+#orange{
+    background-color:#F29E33 ;
+}
+
+#pink{
+    background-color:#D863A1 ;
+}
+
+#green{
+    background-color:#B0C926 ;
 }
