--- a/css/style.css
+++ b/css/style.css
@@ -8,32 +8,34 @@
 body{
     background-color: #F6F8F9;
 }
+
+.button{
+    padding: 5px 10px;
+    background-color: #47ADF1;
+    color: white;
+    border-radius: 5px;
+    border-color: 1px solid #47ADF1;
+}
+.button.section{
+    background-color: white;
+    color: #E3E6E8;
+    border-color: #E3E6E8;
+}
 /* HEADER */
 header{
     background-color: white;
 }
-header div{
-    display: inline-block;
+
+.logo{
+
+    vertical-align: middle;
 }
-header span{
-    font-size: 50px;
+
+header h1{
+    display: inline;
 }
 
 /* MAIN */
-.buttontask{
-    background-color: #47ADF1;
-    color: white;
-    border-radius: 5px;
-    padding: 5px;
-}
-
-.buttonsection{
-    background-color: white;
-    border: solid lightgray 1px;
-    border-radius: 5px;
-    padding: 5px;
-    color: gray;
-}
 
 .container{
     width: 50%;
@@ -49,8 +51,8 @@ header span{
     margin-top: 20px;
     margin-left: 30px;
     margin-bottom: 1px;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 .main{
     padding-left: 40px;
@@ -58,10 +60,16 @@ header span{
     margin-left: 30px;
     color: #686B73 ;
     padding-bottom: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
-.title{
-    padding-top: 30px;
+ul{
+    list-style: none;
+}
+
+div li{
+    padding-top: 15px;
 }
 
 .check{
@@ -88,34 +96,31 @@ header span{
 
 .etiquette{
     font-size: 12px;
-    background-color: #45ABEA;
     border-radius: 10px;
     padding: 5px 10px;
+    color: white;
 }
 
-.main p{
-    margin: 10px;
-}
-.main .title{
-    margin: 0px;
+.editorial{
+    background-color: #45ABEA;
 }
 
-#purple{
+.q1-goals{
     background-color:#9C72E4 ;
 }
 
-#marine{
+.recruiting{
     background-color:#64C0A9 ;
 }
 
-#orange{
+.mobile{
     background-color:#F29E33 ;
 }
 
-#pink{
+.website{
     background-color:#D863A1 ;
 }
 
-#green{
+.sales{
     background-color:#B0C926 ;
 }
